--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,20 @@
     <link rel="shortcut icon" href="icons/icon-192x192.png" type="image/x-icon">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 
     <title>Budget Tracker</title>
 </head>
 
 <body>
+    <header>
+        <nav>
+            <span id='loginNav' class='navlink' onclick="$('#loginModal').modal('show')">Login</span>
+            <span id='logoutNav' class='navlink' onclick="fetch(`/api/user/logout`).then(()=> location.reload())">Logout</span>
+            <span id='usernameNav'>User</span>
+        </nav>
+    </header>
     <div class="wrapper">
         <div class="total">
             <div class="total">Your total is: $<span id="total">0</span></div>
@@ -45,7 +53,67 @@
         <canvas id="myChart"></canvas>
     </div>
 
+    <!-- Login Modal -->
+    <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">User Login</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="/api/user/login" method="POST" name='user-login-form' id='user-login-form'>
+                        <div class="form-group">
+                            <label for="user-email" class="col-form-label">Email:</label>
+                            <input type="text" class="form-control" id="user-login-email" name='email'>
+
+                            <label for="user-password" class="col-form-label">Password:</label>
+                            <input type="password" class="form-control" id="user-login-password" name='password'>
+
+                            <input type="submit" style="margin: 1rem 4rem 0 12rem; display: inline-block;" value="Login">
+                            <span class='form-btn' onclick="showSignup()"> Signup </span>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Signup Modal -->
+    <div class="modal fade" id="signupModal" tabindex="-1" role="dialog" aria-labelledby="signupModalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="signupTitle">User Signup</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="/api/users" method="POST" name='user-signup-form' id='user-signup-form'>
+                        <div class="form-group">
+                            <label for="user-username" class="col-form-label">Username:</label>
+                            <input type="text" class="form-control" id="user-signup-name" name='username'>
+
+                            <label for="user-email" class="col-form-label">Email:</label>
+                            <input type="text" class="form-control" id="user-signup-email" name='email'>
+
+                            <label for="user-password" class="col-form-label">Password:</label>
+                            <input type="password" class="form-control" id="user-signup-password" name='password'>
+
+                            <input type="submit" style="margin: 1rem 4rem 0 12rem; display: inline-block;" value="Signup">
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script src="js/index.js"></script>
     <script src="js/idb.js"></script>
 </body>
