removed retun of hashed password on user queries

--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
                 <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="#" onclick="logoutUser()">Logout</a>
                     <a class="dropdown-item" href="#" onclick="resetBudget()">Reset Budget</a>
-                    <a class="dropdown-item" href="#" onclick="removeUserAccount()">Delete Acount</a>
+                    <a class="dropdown-item" href="#" onclick="removeUserAccount()">Delete Account</a>
                 </div>
             </div>
         </nav>
