--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+
     <title>Budget Tracker</title>
 </head>
 
@@ -35,31 +39,35 @@
         </nav>
     </header>
     <div class="wrapper">
-        <div class="total">
-            <div class="total">Your total is: $<span id="total">0</span></div>
+        <div class="insideWrapper">
+            <div class="total-container">
+                <div class="total-txt">Your total:
+                    <div id="total">$0</div>
+                </div>
+            </div>
+
+            <div class="form">
+                <input type="text" id="t-name" placeholder="Name of transaction" />
+                <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
+                <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
+                <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
+                <p class="error"></p>
+            </div>
+
+            <div class="transactions">
+                <table>
+                    <thead>
+                        <th>Transaction</th>
+                        <th>Amount</th>
+                    </thead>
+                    <tbody id="tbody">
+
+                    </tbody>
+                </table>
+            </div>
+
+            <canvas id="myChart"></canvas>
         </div>
-
-        <div class="form">
-            <input type="text" id="t-name" placeholder="Name of transaction" />
-            <input type="number" min="0" id="t-amount" placeholder="Transaction amount" />
-            <button id="add-btn"><i class="fa fa-plus buttons"></i> Add Funds</button>
-            <button id="sub-btn"><i class="fa fa-minus"></i> Subtract Funds</button>
-            <p class="error"></p>
-        </div>
-
-        <div class="transactions">
-            <table>
-                <thead>
-                    <th>Transaction</th>
-                    <th>Amount</th>
-                </thead>
-                <tbody id="tbody">
-
-                </tbody>
-            </table>
-        </div>
-
-        <canvas id="myChart"></canvas>
     </div>
 
     <!-- Login Modal -->
